hphp/test/zend/bad/tests/classes/factory_and_singleton_007.php
<?php
class test {

  protected function __clone() {
  }
}

$obj = new test;
$clone = clone $obj;
$obj = NULL;

echo "Done\n";
?>